# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testidokumentaatio.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py  level.py
src/sprites/: tile.py
src/tests/: level_test.py
src/ui/: ui.py
